Version 1.0.0
  Bugfixes:
  - Fix logic error that keeps Oracle connections from closing.

Version 0.9.10 (beta), released 2013-12-24
  Enhancements:
  - Add support for INSERT, DELETE and UPDATE.
    This is a major rewrite that might cause some destabilization in
    existing functionality.
  - Add new column option "key" to indicate primary key columns.
    This is needed for UPDATE and DELETE.
  - Add new table option "readonly" to forbid data modifying statements.
  - Improved transaction handling for data modifying statements.
    COMMIT, ROLLBACK and SAVEPOINT will work as expected.
  - Add paths for Oracle 12.1 to the Makefile.
    Patch by Guillaume Lelarge.

  Bugfixes:
  - Don't try to push down the division operator.
    That would produce incorrect results for numeric data types.

Version 0.9.9 (beta), released 2013-08-07
  Enhancements:
  - Enable build with PostgreSQL 9.3.

  Bugfixes:
  - Fix error "ORA-01406: fetched column value was truncated"
    caused by timestamps with precision greater than 6.
    Per report from David E. Wheeler.
  - Fix crash with IN lists that do not entirely consist of constants.
    Per report from Wang Dong.
  - Fix handling of parameters during pushdown of WHERE conditions.
    The previous implementation returned incorrect results for certain
    queries like SELECT ... WHERE colname = (SELECT ...)
    ATTENTION: Since correct handling of parameters is not possible before
    PostgreSQL 9.2, query parameters will not be pushed down in PostgreSQL 9.1.
    This is a regression for cases where this happened to work.
  - Fix a logical error that can lead to incorrect Oracle WHERE clauses.
  - Fix a bug that can lead to the incorrect omission of a scan clause,
    leading to wrong results.

Version 0.9.8 (beta), released 2012-10-16
  Enhancements:
  - Add support for pushdown of IN and NOT IN clauses in WHERE conditions.
    As suggested by Wang Dong.

  Bugfixes: