@@ -1,4 +1,4 @@
 comment = 'foreign data wrapper for Oracle access'
-default_version = '1.0'
+default_version = '1.1'
 module_pathname = '$libdir/oracle_fdw'
 relocatable = true
